// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates a schema 1`] = `
"import knex from \\"knex\\";

export const getDatabaseConnection = () => knex({});

export function RawUsers<Result = RawUser[]>(
  connection = getDatabaseConnection()
) {
  return connection<RawUser, Result>(\\"user\\");
};

export function RawUserAccounts<Result = RawUserAccount[]>(
  connection = getDatabaseConnection()
) {
  return connection<RawUserAccount, Result>(\\"user_account\\");
};

"
`;

exports[`generates a schema with default knex options 1`] = `
"import knex from \\"knex\\";

export const getDatabaseConnection = () => knex();

export function RawUsers<Result = RawUser[]>(
  connection = getDatabaseConnection()
) {
  return connection<RawUser, Result>(\\"user\\");
};

export function RawUserAccounts<Result = RawUserAccount[]>(
  connection = getDatabaseConnection()
) {
  return connection<RawUserAccount, Result>(\\"user_account\\");
};

"
`;

exports[`generates a schema: custom knex options 1`] = `
"import knex from \\"knex\\";

export const getDatabaseConnection = () => knex({\\"client\\":\\"pg\\"});

export function RawUsers<Result = RawUser[]>(
  connection = getDatabaseConnection()
) {
  return connection<RawUser, Result>(\\"user\\");
};

export function RawUserAccounts<Result = RawUserAccount[]>(
  connection = getDatabaseConnection()
) {
  return connection<RawUserAccount, Result>(\\"user_account\\");
};

"
`;
